Bug 1837024: Only do fuzzy hittesting on descendants of clipped accs r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D181166